hopefully fixed scrollbar

--- a/frontend/workout-app/src/index.css
+++ b/frontend/workout-app/src/index.css
@@ -9,6 +9,7 @@ body {
   background: #f1f1f1;
   margin: 0;
   font-family: "Poppins";
+  overflow: hidden;
 }
 
 header {
@@ -135,13 +136,13 @@ form.signup, form.login {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 30%;
 }
 
 .home .description h1{
   text-align: center;
   font-family: "Poppins";
-  font-size: 2.5em;
+  font-size: 2em;
   color: #333;
   text-decoration: none;
 }
